--- a/charts/oai-5g-ran/oai-gnb-cu/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu/values.yaml
@@ -1,5 +1,7 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
+kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
+## In case of using these charts on Openshift then please use UBI images
+## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:   # image name either locally present or in a public/private repository
   repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb  
   version: develop # image tag
@@ -23,7 +25,7 @@ serviceAccount:
 # In case of one to one mapping f1, n2, n3 all can have seperate virtual interfaces. 
 # In one to many mapping f1,n2 and n3 all can be mapped to one virtual interface. 
 # Interface mapping is strictly based on your networking environment 
-
+## Change these ip-addresses according to your environment 
 multus:
   # if defaultGateway is commented then it will be remove
   defaultGateway: 172.21.7.254
@@ -32,21 +34,21 @@ multus:
     IPadd: "172.21.6.90"
     Netmask: "22"
     # if gatway is commented then it will be remove
-    Gateway: "172.21.7.254"
+    #Gateway: "172.21.7.254"
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
     create: false
     IPadd: "172.21.6.91"
     Netmask: "22"
     # if gatway is commented then it will be remove
-    Gateway: "172.21.7.254"
+    #Gateway: "172.21.7.254"
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   f1Interface:
     create: false
     IPadd: "172.21.6.92"
     Netmask: "22"
     # if gatway is commented then it will be remove
-    Gateway: "172.21.7.254"
+    #Gateway: "172.21.7.254"
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
 ## If you want to change more configuration parameters then you should mount the config file or use it from 
@@ -88,6 +90,7 @@ start:
 
 includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
+## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
    repository: docker.io/corfr/tcpdump
    version: latest
@@ -110,7 +113,6 @@ resources:
     nf:
       cpu: 100m
       memory: 128Mi
-
 
 resources:
   define: false
