--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -1,5 +1,7 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
+kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
+## In case of using these charts on Openshift then please use UBI images
+## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:   # image name either locally present or in a public/private repository
   repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb
   version: develop # image tag
@@ -22,6 +24,7 @@ serviceAccount:
 
 # oai-gnb-du helm-charts can be used in RFSimulated mode which does not require multiple interaces. 
 # In case you use the charts with a RU/USRP you need a dedicated interface with the RU. 
+## Change these ip-addresses according to your environment
 
 multus:
   # if defaultGateway is commented then it will be remove
@@ -31,14 +34,16 @@ multus:
     IPadd: "172.21.6.100"
     Netmask: "22"
     # if gatway is commented then it will be remove
-    Gateway: "172.21.7.254"
+    #Gateway: "172.21.7.254"
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   ruInterface:            #Only needed if using a ethernet based RU/USRP
     create: false
     IPadd: "192.168.80.90"
     Netmask: "24"
     # if gatway is commented then it will be remove
-    Gateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
+    #Gateway: "192.168.80.1"  #In case you don't have a gateway remove it from here
+    ## The value must be [0, master's MTU]. If commented it will masters MTU
+    #mtu: 9000
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
 ## If you want to change more configuration parameters then you should mount the config file or use it from 
@@ -79,6 +84,7 @@ start:
 
 includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
+## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
    repository: docker.io/corfr/tcpdump
    version: latest
@@ -103,4 +109,4 @@ terminationGracePeriodSeconds: 5
 
 nodeSelector: {}
 
-nodeName:
+nodeName: 
