--- a/charts/oai-5g-ran/oai-gnb/templates/multus.yaml
+++ b/charts/oai-5g-ran/oai-gnb/templates/multus.yaml
@@ -59,6 +59,9 @@ spec:
       "cniVersion": "0.3.1",
       "type": "macvlan",
       "master": {{- cat .Values.multus.ruInterface.hostInterface | nospace | quote }},
+      {{- if .Values.multus.ruInterface.mtu }}
+      "mtu": {{ .Values.multus.ruInterface.mtu }},
+      {{- end }}
       "mode": "bridge",
       "ipam": {
         "type": "static",
