--- a/charts/oai-5g-ran/oai-nr-ue/values.yaml
+++ b/charts/oai-5g-ran/oai-nr-ue/values.yaml
@@ -1,5 +1,7 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution
+kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
+## In case of using these charts on Openshift then please use UBI images
+## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:
   repository: docker.io/oaisoftwarealliance/oai-nr-ue           # dockehub oaisoftwarealliance/oai-nr-ue
   version: develop # image tag    # develop tag experimental features 
@@ -19,6 +21,7 @@ serviceAccount:
 imagePullSecrets: 
  - name: "regcred"
 
+## Change these ip-addresses according to your environment
 multus:
   create: false
   ipadd: "172.21.6.27"  # interface needed to connect with gnb
@@ -50,6 +53,7 @@ start:
 
 includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
 
+## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
    repository: docker.io/corfr/tcpdump
    version: latest
