Correction in e1 split charts

--- a/charts/oai-5g-ran/oai-gnb-cu-cp/templates/configmap.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-cp/templates/configmap.yaml
@@ -194,7 +194,7 @@ data:
           (
             {
               type = "cp";
-              ipv4_cucp = "{{ .Values.multus.f1cInterface.IPadd }}";
+              ipv4_cucp = "{{ .Values.multus.e1Interface.IPadd }}";
               port_cucp = 38462;
               ipv4_cuup = "{{ .Values.config.e1IpAddress }}";
               port_cuup = 38462;
