--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -82,14 +82,26 @@ tcpdumpimage:
    #pullPolicy: IfNotPresent or Never or Always
    pullPolicy: IfNotPresent
 
+## NF is the network function and tcpdump is the tcpdump container. 
+## To know more about request and limit it is better to understand that how Kubernetes QoS works. 
+## https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
+## https://kubernetes.io/docs/concepts/workloads/pods/pod-qos
 resources:
   define: false
   limits:
-    cpu: 100m
-    memory: 128Mi
+    nf:
+      cpu: 100m
+      memory: 128Mi
+    # tcpdump:
+    #   cpu: 100m
+    #   memory: 128Mi
   requests:
-   cpu: 100m
-   memory: 256Mi
+    nf:
+      cpu: 100m
+      memory: 128Mi
+    # tcpdump:
+    #   cpu: 100m
+    #   memory: 128Mi
 
 tolerations: []
 
