--- a/charts/oai-5g-ran/oai-gnb-cu-cp/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-cp/templates/deployment.yaml
@@ -54,23 +54,23 @@ spec:
         {{- if .Values.resources.define}}
         resources:
           requests:
-            memory: {{ .Values.resources.requests.memory | quote }}
-            cpu: {{ .Values.resources.requests.cpu | quote }}
+            memory: {{ .Values.resources.requests.nf.memory | quote }}
+            cpu: {{ .Values.resources.requests.nf.cpu | quote }}
           limits:
-            memory: {{ .Values.resources.limits.memory | quote }}
-            cpu: {{ .Values.resources.limits.cpu | quote }}
+            memory: {{ .Values.resources.limits.nf.memory | quote }}
+            cpu: {{ .Values.resources.limits.nf.cpu | quote }}
         {{- end}}
         securityContext:
            privileged: true
         ports:
-        - containerPort: 2152
-          name: n3
-          protocol: UDP
         - containerPort: 36412
-          name: f1
+          name: n2
           protocol: SCTP
-        - containerPort: 2153
+        - containerPort: 38462
           name: e1
+          protocol: SCTP
+        - containerPort: 38472
+          name: f1c
           protocol: UDP
         {{- if .Values.start.gnbcucp}}
         {{- else}}
@@ -92,11 +92,11 @@ spec:
         {{- if .Values.resources.define}}
         resources:
           requests:
-            memory: {{ .Values.resources.tcpdump.requests.memory | quote }}
-            cpu: {{ .Values.resources.tcpdump.requests.cpu | quote }}
+            memory: {{ .Values.resources.requests.tcpdump.memory | quote }}
+            cpu: {{ .Values.resources.requests.tcpdump.cpu | quote }}
           limits:
-            memory: {{ .Values.resources.tcpdump.limits.memory | quote }}
-            cpu: {{ .Values.resources.tcpdump.limits.cpu | quote }}
+            memory: {{ .Values.resources.limits.tcpdump.memory | quote }}
+            cpu: {{ .Values.resources.limits.tcpdump.cpu | quote }}
         {{- end}}
         securityContext:
            privileged: true
