--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -27,7 +27,7 @@ serviceAccount:
 ## Change these ip-addresses according to your environment
 
 multus:
-  # if defaultGateway is commented then it will be remove
+  # if default gatway is commented or left blank then it will be remove
   defaultGateway: "172.21.7.254"
   f1Interface:
     create: false
@@ -46,10 +46,11 @@ multus:
     #mtu: 9000
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
 
-## If you want to change more configuration parameters then you should mount the config file or use it from 
-# https://gitlab.eurecom.fr/oai/openairinterface5g/-/tree/develop/targets/PROJECTS/GENERIC-NR-5GC/CONF 
+## If you want to change more configuration parameters then you should mount the config file  
+# in templates/configmap.yaml
+# Example config files --> https://gitlab.eurecom.fr/oai/openairinterface5g/-/tree/develop/targets/PROJECTS/GENERIC-NR-5GC/CONF 
 config:
-  mountConfig: false          #If config file is mounted then please edit mount.conf in configmap.yaml properly 
+  mountConfig: false          #If config file is mounted then please edit mount.conf in templates/configmap.yaml properly 
   timeZone: "Europe/Paris"
   useAdditionalOptions: "--sa --rfsim --log_config.global_log_options level,nocolor,time"
   # If mounting the configuration file then below parameters are not used
@@ -62,16 +63,18 @@ config:
   tac: "1"     # check the information with AMF
   nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4
   nssaiSd0: "ffffff"    #values in hexa-decimal format
+  f1IfName: "eth0"                # net1 incase multus create is true
+  f1cuIpAddress: "172.21.6.92"     # replace this value with CU f1 ip-address or CU-CP F1C ip-address if not using multus
+  f1duIpAddress: "status.podIP"    # 172.21.6.100 if using multus
+  f1cuPort: "2152"
+  f1duPort: "2152"
+  #Not mandatory
   amfIpAddress: "127.0.0.1"  # Not mandatory, you can leave it like this in coming release it will be removed
   gnbNgaIfName: "eth0"            # net1 in case multus create is true that means another interface is created for ngap interface, n2 to communicate with amf
   gnbNgaIpAddress: "status.podIP" # f1Interface.Ipadd in case multus create is true
-  gnbNguIfName: "eth0"   #net2 in case multus create is true gtu interface for upf/spgwu
+  gnbNguIfName: "eth0"   #net1 in case multus create is true gtu interface for upf/spgwu
   gnbNguIpAddress: "status.podIP" # f1Interface.Ipadd in case multus create is true
-  f1IfName: "eth0"                # net1 incase multus create is true
-  f1cuIpAddress: "10.244.0.16"     # replace this value with CU f1 ip-address or CU-CP F1C ip-address if not using multus
-  f1duIpAddress: "status.podIP"
-  f1cuPort: "2152"
-  f1duPort: "2152"
+
 
 ## Debugging section
 podSecurityContext:
@@ -91,14 +94,26 @@ tcpdumpimage:
    #pullPolicy: IfNotPresent or Never or Always
    pullPolicy: IfNotPresent
 
+## NF is the network function and tcpdump is the tcpdump container. 
+## To know more about request and limit it is better to understand that how Kubernetes QoS works. 
+## https://kubernetes.io/docs/concepts/configuration/manage-resources-containers
+## https://kubernetes.io/docs/concepts/workloads/pods/pod-qos
 resources:
   define: false
   limits:
-    cpu: 100m
-    memory: 128Mi
+    nf:
+      cpu: 100m
+      memory: 128Mi
+    # tcpdump:
+    #   cpu: 100m
+    #   memory: 128Mi
   requests:
-   cpu: 100m
-   memory: 256Mi
+    nf:
+      cpu: 100m
+      memory: 128Mi
+    # tcpdump:
+    #   cpu: 100m
+    #   memory: 128Mi
 
 
 tolerations: []
