--- a/charts/oai-5g-core/oai-5g-slicing/values.yaml
+++ b/charts/oai-5g-core/oai-5g-slicing/values.yaml
@@ -112,10 +112,10 @@ oai-amf:
     nssfFqdn: "oai-nssf-svc"
     nrfSelection: "yes"
     logLevel: "debug"   #allowed info/error/debug
-    # Mandatory
-    sst0: "1"
-    sd0: "0xFFFFFF"
-    # Optional upto 4 slices can be define using below template
+    sst0: "1"         ## 1 slice/SST is mandatory
+    sd0: "0xFFFFFF"   ## Optional 0xFFFFFF means no SD as per 3GPP
+    ## Can add upto 3 more slices. More than that you can do it in the configmap of amf templates/configmap.yaml
+    # Note only SST is mandatory for a slice SD is optional
     sst1: "1"
     sd1: "1"
     mcc: "001"
