--- a/charts/oai-5g-core/oai-amf/values.yaml
+++ b/charts/oai-5g-core/oai-amf/values.yaml
@@ -44,26 +44,29 @@ multus:
 ## functions example nrf then you can disable useFqdnDns feature this way AMF will talk to other network functions using their ip-address. 
 
 config:
+  logLevel: "debug" #info/debug/error
+  amfInterfaceNameForNGAP: "eth0" # If multus creation is true then net1 else eth0
+  amfInterfaceNameForSBI: "eth0"  # Service based interface
+  amfInterfaceSBIHTTPPort: 80  # Service based interface
+  amfInterfaceSBIHTTP2Port: 8080  # Service based interface
   mcc: "001"
   mnc: "01"
   regionId: "128"
   amfSetId: "1"
   tac: "0x0001"
-  sst0: "1"
-  sd0: "0xFFFFFF"
+  sst0: "1"         ## 1 slice/SST is mandatory
+  sd0: "0xFFFFFF"   ## Optional 0xFFFFFF means no SD as per 3GPP
+  ## Can add upto 3 more slices. More than that you can do it in the configmap of amf templates/configmap.yaml
+  # Note only SST is mandatory for a slice SD is optional
   sst1: "1"
   sd1: "1"
-  amfInterfaceNameForNGAP: "eth0" # If multus creation is true then net1 else eth0
-  amfInterfaceNameForSBI: "eth0"  # Service based interface
-  amfInterfaceSBIHTTPPort: 80  # Service based interface
-  amfInterfaceSBIHTTP2Port: 8080  # Service based interface
-  smfFqdn: "oai-smf-svc"
-  nrfFqdn: "oai-nrf-svc"  # amf communicates using FQDN
+  smfFqdn: "oai-smf-svc"     # amf communicates using FQDN/Service Name
+  nrfFqdn: "oai-nrf-svc"     # amf communicates using FQDN/Service Name
   ausfFqdn: "oai-ausf-svc"   #only needed if ausf is used and externalAusf is true else internal ausf will be used
   nfRegistration: "yes"
   nrfSelection: "no"
   smfSelection: "yes"
-  externalAusf: "yes"
+  externalAusf: "yes"         #Ausf will be used instead of using internal AUSF for mini deployment
   externalUdm: "no"
   externalNrf: "no"
   externalNssf: "no"
@@ -74,7 +77,6 @@ config:
   mySqlUser: "root" # OPTIONAL: used only if not using AUSF
   mySqlPass: "linux" # OPTIONAL: used only if not using AUSF
   mySqlDb: "oai_db" # OPTIONAL: used only if not using AUSF
-  logLevel: "debug"
 
 ## Debugging section
 start:
@@ -104,16 +106,18 @@ resources:
     nf:
       cpu: 100m
       memory: 128Mi
-    # tcpdump:
-    #   cpu: 100m
-    #   memory: 128Mi
+    #If tcpdump container is disabled this value will not be used
+    tcpdump:
+      cpu: 100m
+      memory: 128Mi
   requests:
     nf:
       cpu: 100m
       memory: 128Mi
-    # tcpdump:
-    #   cpu: 100m
-    #   memory: 128Mi
+    #If tcpdump container is disabled this value will not be used
+    tcpdump:
+      cpu: 100m
+      memory: 128Mi
 
 readinessProbe: true
 
